test/files/neg/interop_classmanifests_arenot_concretetypetags.check
interop_classmanifests_arenot_concretetypetags.scala:3: error: No ConcreteTypeTag available for T
    println(concreteTypeTag[T])
                           ^
one error found
